# Resume-AI-Toolkit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sample_jd.txt
